--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js"
   },
+  "engines": {
+    "node": "12.18.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +18,7 @@
     "@prisma/client": "^2.9.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +31,7 @@
     "@prisma/cli": "^2.9.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
