--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@prisma/cli": "^2.9.0",
